Fix file modal image getting scrollbar

--- a/src/app/shared/file-modal/file-modal.component.scss
+++ b/src/app/shared/file-modal/file-modal.component.scss
@@ -30,6 +30,7 @@
     justify-content: center;
     padding: 0;
     height: 100%;
+    min-height: 0;
 
     img {
       max-width: 100%;
